PORTALS-2367: add a breakpoint for categories, and flex-wrap the featured tools to fix x-overflow

--- a/packages/synapse-react-client/src/style/components/_featured-tool-card.scss
+++ b/packages/synapse-react-client/src/style/components/_featured-tool-card.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  flex-wrap: wrap;
 }
 
 .FeaturedToolCard {
